# aws-cost-notification-rs

./: .env.sample  Cargo.toml  README.md
src/: lib.rs  main.rs
src/aws/: billing_period.rs  cost_explorer.rs  get_billing_date.rs  mod.rs
src/slack/: client.rs  message.rs  mod.rs  payload.rs  post_message.rs
